updated the code refinements

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_API_URL=https://avinashjsonserverdb.herokuapp.com
+REACT_APP_ADMIN_EMAIL=admin@gmail.com
+REACT_APP_ADMIN_PWD=123
+REACT_APP_USER_EMAIL=user@gmail.com
+REACT_APP_USER_PWD=123
